Complete Technical Sections

--- a/4. Modeling and Evaluation.ipynb
+++ b/4. Modeling and Evaluation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# __Modeling and Evaluation__"
+    "# __4.0 Modeling and Evaluation__"
    ]
   },
   {
@@ -405,11 +405,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "**Model Evaluation and Performance Report**\n",
-    "\n",
-    "**Observations:**\n",
     "\n",
     "- **No Extensive Tuning:** Due to computational constraints, I did not perform extensive hyperparameter tuning on the models. However, basic regularization techniques were applied to prevent overfitting.\n",
     "\n",
