Post Submission Adjustments

--- a/3. EDA.ipynb
+++ b/3. EDA.ipynb
@@ -403,6 +403,7 @@
    "source": [
     "## __Observations__\n",
     "\n",
+    "Noted the outliers - but would ignore them for now to reduce the rate of loss of data  \n",
     "\n",
     "**Univariate Analysis:**\n",
     "\n",
@@ -423,6 +424,11 @@
     "9.  **Longitude vs. Functionality:**  There appears to be a loose trend where functional wells are more concentrated at higher longitudes, but this requires further investigation.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
