--- a/1. Business Understanding.ipynb
+++ b/1. Business Understanding.ipynb
@@ -81,11 +81,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In organizing this project into six distinct Jupyter notebooks (Business Understanding, Data Preparation, EDA, Modeling and Evaluation, Deployment(.py), and Conclusion & Recommendations), a strategic approach was adopted to enhance the overall workflow and project management. This modular structure serves several key purposes:\n",
+    "In organizing this project into six distinct files (5 Jupyter Notebooks) (Business Understanding, Data Preparation, EDA, Modeling and Evaluation, Deployment(.py), and Conclusion & Recommendations), a strategic approach was adopted to enhance the overall workflow and project management. This modular structure serves several key purposes:\n",
     "\n",
-    "- **Reduced Runtime Efficiency:** By isolating computationally intensive tasks like data preprocessing or model training into separate notebooks, resources can be allocated more effectively, and individual steps can be executed independently without re-running the entire analysis each time. \n",
-    "- **Improved Editing and Collaboration:**  Each notebook focuses on a specific aspect of the project, making it easier to locate and modify relevant code sections. This targeted approach also facilitates collaboration among team members who can work on different notebooks concurrently without interfering with each other's progress. \n",
+    "- **Reduced Runtime Efficiency:** By isolating computationally intensive tasks like data preprocessing or model training into separate notebooks, resources were allocated more effectively, and individual steps can be executed independently without re-running the entire analysis each time. \n",
+    "- **Improved Editing and Collaboration:**  Each notebook focuses on a specific aspect of the project, making it easier to locate and modify relevant code sections. \n",
+    " \n",
     "- **Enhanced Reproducibility and Organization:** The clear separation of project phases into different notebooks provides a logical structure, making the analysis process more transparent and easier to reproduce. Additionally, it allows for better version control and documentation of each step.\n",
+    "\n",
     "- **Targeted Debugging:** If errors occur, isolating them to a specific notebook simplifies the debugging process, as the scope of the issue is narrowed down.\n"
    ]
   }
