--- a/6. Conclusion and Recomendations.ipynb
+++ b/6. Conclusion and Recomendations.ipynb
@@ -8,24 +8,27 @@
     "\n",
     "## __6.1 Key Findings__\n",
     "\n",
-    "The machine learning models developed in this project demonstrate the potential for predicting the functionality status of water wells in Tanzania with reasonable accuracy. The XGBoost and Voting Classifier models, in particular, achieved the highest accuracy of approximately 79%, indicating their ability to capture complex patterns in the data.\n",
+    "The machine learning models developed in this project demonstrate the potential for predicting the functionality status of water wells in Tanzania with accuracy of atleast 80%. The **Voting Classifier** in the first iteration (without SMOTE) shows the highest accuracy (0.80). Its however worth noting: \n",
     "\n",
-    "However, the challenge of accurately identifying wells in need of repair (the 'functional needs repair' class) remains. This is likely due to:\n",
+    "1. **Class Imbalance Considerations:**\n",
     "\n",
-    "* **Class Imbalance:** The dataset contains a smaller proportion of wells that need repair compared to functional and non-functional wells, making it harder for models to learn patterns for this class.\n",
-    "* **Data Limitations:**  Missing data and the use of zero as an imputation value might introduce noise, potentially affecting model performance, especially for less frequent classes.\n",
+    "- **Iteration 1:** All models perform poorly on class 1, indicating a bias towards the majority class. The high accuracy of the Voting Classifier in this iteration might be misleading, as it's not capturing the nuances of the minority class well.\n",
+    "- **Iteration 2:** SMOTE significantly improves the models' ability to predict class 1 (as seen in the increased recall and F1-score for that class). This is a crucial improvement, as accurately predicting the minority class is often more important in real-world applications.\n",
+    "\n",
+    "2. **Overall Performance:**\n",
+    "\n",
+    "- Even though the Voting Classifier's accuracy decreases slightly in Iteration 2 (with SMOTE) compared to Iteration 1, its performance is more balanced across all classes. This makes it a more robust and reliable model in the long run.\n",
+    "\n",
+    "3. **ROC Curve Analysis:**\n",
+    "\n",
+    "- The micro-average ROC AUC for the Voting Classifier is relatively high in both iterations (0.80 and 0.78). This suggests good overall discriminative power, even though there's room for improvement in class 1 prediction.\n",
     "\n",
     "## __6.2 Recommendations__\n",
     "\n",
-    "1. **Further Data Collection and Exploration:** Gather more data, especially on wells that require repair, to address the class imbalance issue. Explore the possibility of collecting additional features that might be predictive of well functionality (e.g., water quality data, maintenance records).\n",
     "\n",
-    "2. **Advanced Feature Engineering:** Investigate more sophisticated feature engineering techniques, such as creating interaction terms, to potentially capture non-linear relationships between features and well status.\n",
+    "Considering the class imbalance issue and the importance of balanced performance, the **Voting Classifier in the second iteration (with SMOTE)** would likely be the best choice. While its overall accuracy is slightly lower than in the first iteration, it offers a more balanced performance across all classes and is less prone to the pitfalls of the imbalanced dataset. \n",
     "\n",
-    "3. **Alternative Models:** Explore other machine learning algorithms like Support Vector Machines (SVM) or gradient boosting methods like LightGBM or CatBoost. These models might offer better performance in handling imbalanced datasets or high-dimensional data.\n",
     "\n",
-    "4. **Cost-Sensitive Learning:** Implement cost-sensitive learning approaches that penalize misclassifications of the 'functional needs repair' class more heavily. This can help the models prioritize correctly identifying wells that require immediate attention.\n",
-    "\n",
-    "5. **Model Calibration:** Consider calibrating the model's probability estimates to improve the reliability of its predictions. Calibration ensures that the predicted probabilities align with the actual likelihood of each class.\n",
     "\n",
     "## __6.3 Future Work__\n",
     "\n",
