Include Personal Details and Some Comments

--- a/1. Business Understanding.ipynb
+++ b/1. Business Understanding.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# __Predicting Water Pump Functionality in Tanzania: A Machine Learning Approach to Optimize Resource Allocation__\n",
+    "\n",
+    "Student name: Gregory Mikuro\n",
+    "\n",
+    "Student pace: Hybrid\n",
+    "\n",
+    "Instructor name: Nikita Njoroge\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **1.0 Business Understanding**\n",
     "\n",
     "## __1.1 Overview__\n",
