--- a/3. EDA.ipynb
+++ b/3. EDA.ipynb
@@ -356,6 +356,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    " __Note: Due to the predominance of categorical features and the nature of their distributions, traditional bivariate visualizations like scatterplots did not yield meaningful insights into the relationships between variables.__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## __Multivariate Analysis__ "
    ]
   },
